style: rename CURD function
